# ComfyUI-easygoing-nodes

./: .gitignore  .tracking  README.md  __init__.py  easygoing_nodes.py  pyproject.toml  settings.json  settings_manager.py  test_settings.py  web_api.py
.github/workflows/: publish.yml
modified_modules/: hidream.py  sdxl_clip.py
nodes/: __init__.py  color_nodes.py  image_difference_checker_nodes.py  merge_nodes.py  model_load_save_nodes.py  save_image_nodes.py  save_nodes.py  text_encode_nodes.py
web/js/: easygoing_settings.js  image_difference_checker.js
