[project]
name = "comfyui-easygoing-nodes"
description = "Experimental Text Encoder module and HDR Effects and color adjustment in LAB color space and Image Difference Checker nodes by easygoing0114"
version = "1.4.5"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/easygoing0114/ComfyUI-easygoing-nodes"
Documentation = "https://www.ai-image-journey.com/2025/09/comfyui-easygoing-nodes.html"

[tool.comfy]
PublisherId = "easygoing0114"
DisplayName = "Easygoing Nodes"
Icon = "https://github.com/easygoing0114/ComfyUI-easygoing-nodes/blob/main/Images/thumbnail%20image.png"
