[project]
name = "comfyui-easygoing-nodes"
description = "Experimental Text Encoder module, HDR Effects with LAB adjusts, Image Difference checker nodes by easygoing0114"
version = "1.5.3"
license = { file = "LICENSE" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/easygoing0114/ComfyUI-easygoing-nodes"
Documentation = "https://www.ai-image-journey.com/2025/09/comfyui-easygoing-nodes.html"

[tool.comfy]
PublisherId = "easygoing0114"
DisplayName = "Easygoing Nodes"
Icon = "https://raw.githubusercontent.com/easygoing0114/ComfyUI-easygoing-nodes/main/Images/easygoing_nodes_icon_square_webp_400.webp"
Banner = "https://raw.githubusercontent.com/easygoing0114/ComfyUI-easygoing-nodes/main/Images/easygoing_nodes_banner_21_9.png"